fix(client): make subtask scores right-aligned

--- a/judgels-client/src/components/SubmissionDetails/Programming/SubmissionDetails.scss
+++ b/judgels-client/src/components/SubmissionDetails/Programming/SubmissionDetails.scss
@@ -25,7 +25,7 @@
   }
 
   .col-verdict {
-    width: 140px;
+    width: 135px;
   }
 
   .col-tc-info {
@@ -95,11 +95,14 @@
 
   .subtask-verdict {
     display: inline-block;
-    width: 140px;
+    width: 130px;
     font-weight: normal;
   }
 
   .subtask-score {
+    display: inline-block;
+    width: 30px;
     font-weight: normal;
+    text-align: right;
   }
 }
